--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "cross-env NODE_ENV=production pm2 start app.js"
+    "start": "cross-env NODE_ENV=production pm2 start app.js",
+    "test": "cross-env NODE_ENV=production node app.js"
+
   },
   "author": "shinh",
   "license": "ISC",
