--- a/client/package.json
+++ b/client/package.json
@@ -40,10 +40,11 @@
     "redux-saga": "^1.1.3",
     "shortid": "^2.2.16",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.3",
+    "styled-components": "^5.3.5",
     "swr": "^1.2.2"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.25",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.3",
     "eslint-config-airbnb": "^19.0.4",
